# DMMA

./: CMakeLists.txt  README.md  weak_scaling.sh
final_project/dmma/: CMakeLists.txt  README.md  challenge.txt  mitm_original  mpi_hostfile  run_stress_test.sh  stress_test_error.txt  stress_test_output.txt  test.80s-205856,janscomputer.btr  test.80s-205861,janscomputer.btr  test.80s-205871,janscomputer.btr  test.80s-205925,janscomputer.btr  test.80s-206020,janscomputer.btr  test.80s-206030,janscomputer.btr  test.80s-206033,janscomputer.btr  test.80s-206116,janscomputer.btr  test.80s-206174,janscomputer.btr  v1  v1.80s-251343,janscomputer.btr  v3  v3.80s-241031,janscomputer.btr  v3.80s-241032,janscomputer.btr  v3.80s-241033,janscomputer.btr  v3.80s-241034,janscomputer.btr  v3.80s-241040,janscomputer.btr  v3.80s-241067,janscomputer.btr  v3.80s-241071,janscomputer.btr  v3.80s-241086,janscomputer.btr  v3.80s-241128,janscomputer.btr  v3.80s-241422,janscomputer.btr  v3.80s-241482,janscomputer.btr  v3.80s-241483,janscomputer.btr  v3.80s-241496,janscomputer.btr  v3.80s-241497,janscomputer.btr  v3.80s-241580,janscomputer.btr  v3.80s-241581,janscomputer.btr  v3.80s-241637,janscomputer.btr  v3.80s-241638,janscomputer.btr  v3.80s-242267,janscomputer.btr  v3.80s-242268,janscomputer.btr  (+82 more)
final_project/dmma/include/: .homogeneous_DAG.h.swp  homogeneous_DAG.h
final_project/dmma/src/: .communication.h.swp  .mitm.c.swp  .mitm_version3.c.swp  .mitm_version4.c.swp  a.out  communication.h  mitm.c  mitm_original.c  mitm_version1.c  mitm_version2.c  mitm_version3.c  mitm_version4.c  test.c  (+13 more)
(+16 files in other folders)
